Unidad-8:Kubernetes/recursos/practica/r_php-biblioteca.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: biblioteca
spec:
  replicas: 2
  selector:
    matchLabels:
      app: biblioteca
  template:
    metadata:
      labels:
        app: biblioteca
    spec:
      containers:
        - name: biblioteca
          image: aleeexlmd/biblioteca:v2
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"

---

apiVersion: v1
kind: Service
metadata:
  name: biblioteca-service
spec:
  selector:
    app: biblioteca
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080  # Se asigna un puerto en el nodo
  type: NodePort
