Unidad-8:Kubernetes/recursos/practica/r_ingress-biblioteca.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: biblioteca-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: biblioteca.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: biblioteca-service
                port:
                  number: 80
